--- a/css/styles.css
+++ b/css/styles.css
@@ -105,7 +105,8 @@ a {text-decoration: none;}
 
 
 .section-one {
-    background-color: #2e2f42;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7),rgba(46, 47, 66, 0.7)), url(../images/people-backg.jpg);
+    background-size:cover;
     padding: 188px 0;
     text-align: center;    
 }
