--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,10 @@ a {text-decoration: none;}
 
 /*----------------------------------------------HEADER -----------------------------------------------------------*/
 .page-header {
-    border-bottom: 1px solid #e7e9fc;    
+    border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+            0px 1px 1px rgba(46, 47, 66, 0.16),
+            0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .page-header .container {
    display: flex;
@@ -45,7 +48,9 @@ a {text-decoration: none;}
     display: flex;
     align-items: center;
 }
-
+.nav-item {
+    position: relative;
+}
 .header-logo {
     margin-right: 76px;
     font-weight: 700;
@@ -77,6 +82,9 @@ a {text-decoration: none;}
     color: #2e2f42;
     padding: 24px 0;
     text-decoration: none;
+    position: relative;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .nav-link:hover,
@@ -85,7 +93,30 @@ a {text-decoration: none;}
 .contacts-link:focus {
     color: #404bbf;
 }
+.nav-link::after {
+    content:"";
+    position: absolute;
+    left: 0;
+     bottom: -1px;
+    width: 100%;
+    height: 4px;
+     background-color: #404bbf;
+     border-radius: 2px;
+    opacity: 0;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1)
+}
 
+.nav-link:hover::after,
+.nav-link:focus::after {
+    opacity: 1;}
+
+.contacts-link {
+    font-size: 16px;
+    color: #2e2f42;
+    text-decoration: none;
+    white-space: nowrap;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
 
 .contacts-list {
     display: flex;
@@ -105,10 +136,14 @@ a {text-decoration: none;}
 
 
 .section-one {
+    max-width: 1440px;
     background-image: linear-gradient(rgba(46, 47, 66, 0.7),rgba(46, 47, 66, 0.7)), url(../images/people-backg.jpg);
+    background-repeat: no-repeat;
     background-size:cover;
+    background-position: center;
     padding: 188px 0;
-    text-align: center;    
+    text-align: center;  
+    
 }
 
 .section-one .container {
@@ -140,6 +175,7 @@ margin-right:auto;}
         cursor: pointer;
         display: block;
         margin: 0 auto;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 .order-serv-btn:hover,
 .order-serv-btn:focus {
@@ -289,9 +325,16 @@ margin-right:auto;}
     
 }
 .portfolio-item {
+    transition: box-shadow 250ms ease-in-out;
+    cubic-bezier(0.4, 0, 0.2, 1);
     border-top: none;
-    width: calc((100% - 48px) / 3);
-     }
+    width: calc((100% - 48px) / 3);}
+
+    .portfolio-item:hover{
+box-shadow: 0 2px 4px rgba(46, 47, 66, 0.1),
+        0 4px 8px rgba(46, 47, 66, 0.1);
+}
+
 
 .portfolio-info {
     padding: 32px 16px;
