--- a/css/styles.css
+++ b/css/styles.css
@@ -205,7 +205,7 @@ margin-right:auto;}
         background: #f4f4fd;
         display: flex;
         justify-content: center;
-        margin: bottom 8px; ;
+        margin: bottom: 8px; ;
         align-items: center;
 }
   .features-list {
