--- a/css/styles.css
+++ b/css/styles.css
@@ -197,6 +197,11 @@ margin-right:auto;}
         align-items: center;
         gap:24px;
 }
+
+.icon-section-two{
+    width: 64px;
+    height: 64px;
+}
 .icon-container-two{
         border: 1px solid #8e8f99;
         border-radius: 4px;
@@ -205,7 +210,7 @@ margin-right:auto;}
         background: #f4f4fd;
         display: flex;
         justify-content: center;
-        margin: bottom: 8px; ;
+        margin-bottom: 8px; 
         align-items: center;
 }
   .features-list {
