--- a/css/styles.css
+++ b/css/styles.css
@@ -199,8 +199,8 @@ margin-right:auto;}
 }
 
 .icon-section-two{
-    width: 64px;
-    height: 64px;
+    width: 64;
+    height: 64;
 }
 .icon-container-two{
         border: 1px solid #8e8f99;
