--- a/css/styles.css
+++ b/css/styles.css
@@ -261,6 +261,8 @@ margin-right:auto;}
     align-items: center;
     justify-content: center;
     gap:24px;
+    width: 40px;
+    height: 40px;
 
 .icon-section-thee {
     width: 16;
@@ -284,6 +286,7 @@ margin-right:auto;}
 .team-info{
     padding-top:32px;
     padding-bottom:32px;
+    
 }
 .team-item {
     background-color: #ffffff;
