--- a/css/styles.css
+++ b/css/styles.css
@@ -257,17 +257,30 @@ margin-right:auto;}
     text-align: center;
 }
 .social-items{
+    flex-direction: row;
     display:flex;
     align-items: center;
     justify-content: center;
     gap:24px;
-    width: 40px;
-    height: 40px;
-
-.icon-section-thee {
-    width: 16;
-    height: 16;
+    padding-top:  8px;
 }
+    
+
+.social-link{
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+     width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #404bbf;
+    
+    .social-link:hover, 
+    .social-link:focus {
+        background-color: #404bbf; #4d4d4d
+    }
+    
 }
 .team-title {
     margin-bottom: 72px; 
@@ -286,7 +299,7 @@ margin-right:auto;}
 .team-info{
     padding-top:32px;
     padding-bottom:32px;
-    
+
 }
 .team-item {
     background-color: #ffffff;
