--- a/css/styles.css
+++ b/css/styles.css
@@ -267,7 +267,6 @@ margin-right:auto;}
     
 
 .social-link{
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -275,13 +274,21 @@ margin-right:auto;}
     height: 40px;
     border-radius: 50%;
     background-color: #404bbf;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); }
     
     .social-link:hover, 
     .social-link:focus {
-        background-color: #404bbf; #4d4d4d
+        background-color: #404bbf; 
     }
     
-}
+ .icon-section-thee{
+    width: 16px;
+    height: 16px;
+    fill: #f4f4fd;
+    
+    ;
+ }
+
 .team-title {
     margin-bottom: 72px; 
     font-weight: 700;
