--- a/css/styles.css
+++ b/css/styles.css
@@ -285,7 +285,7 @@ margin-right:auto;}
     width: 16px;
     height: 16px;
     fill: #f4f4fd;
-    
+
     ;
  }
 
@@ -313,8 +313,9 @@ margin-right:auto;}
     text-align: center;
     padding-bottom: 20px;
     border-radius: 0px 0px 4px 4px;
-    box-shadow: 0 2px 4px rgba(46, 47, 66, 0.1),
-        0 4px 8px rgba(46, 47, 66, 0.1);
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
     width: calc((100% - 72px) / 4);
     max-width: 264px;
 }
