--- a/css/styles.css
+++ b/css/styles.css
@@ -273,8 +273,9 @@ margin-right:auto;}
      width: 40px;
     height: 40px;
     border-radius: 50%;
-    background-color: #404bbf;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); }
+    background-color:  #4d5ae5;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+}
     
     .social-link:hover, 
     .social-link:focus {
