--- a/css/styles.css
+++ b/css/styles.css
@@ -279,7 +279,7 @@ margin-right:auto;}
     
     .social-link:hover, 
     .social-link:focus {
-        background-color: #404bbf; 
+    background-color: #404bbf;
     }
     
  .icon-section-thee{
@@ -369,12 +369,15 @@ margin-right:auto;}
 .portfolio-item {
     transition: box-shadow 250ms ease-in-out;
     cubic-bezier(0.4, 0, 0.2, 1);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     border-top: none;
     width: calc((100% - 48px) / 3);}
 
+
     .portfolio-item:hover{
-box-shadow: 0 2px 4px rgba(46, 47, 66, 0.1),
-        0 4px 8px rgba(46, 47, 66, 0.1);
+box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 
