--- a/css/styles.css
+++ b/css/styles.css
@@ -277,7 +277,9 @@ margin-right:auto;}
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
     
-    .social-link:hover, 
+    .social-link:hover{
+    background-color: #404bbf;
+    } 
     .social-link:focus {
     background-color: #404bbf;
     }
