--- a/css/styles.css
+++ b/css/styles.css
@@ -464,5 +464,37 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
      font-size: 16px;
      line-height: 1.5;
      letter-spacing: 0.02em;
-     color: #fff;
+     color: #FFFFFF;
+    margin-bottom: 16px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    ;
  }  
+.social-items{
+  display: flex;  
+align-items: baseline;
+gap: 16px;
+
+}
+.footter-social-list{
+    width: 40px;
+    height: 40px;
+}
+.social-link {
+    width: 100%
+    height: 100%,
+    background-color: #4d5ae5;
+    border-radiaus: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.social-link:hover {background-color: #31d0aa;}
+.social-link:focus {background-color: #31d0aa;}
+
+.icon-section-footer {
+    fill:  #f4f4fd
+}
