--- a/css/styles.css
+++ b/css/styles.css
@@ -471,7 +471,7 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     display: flex;
     ;
  }  
-.social-items{
+.social-items-footer{
   display: flex;  
 align-items: baseline;
 gap: 16px;
