--- a/css/styles.css
+++ b/css/styles.css
@@ -459,7 +459,7 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
 .footer-logo {
         display: inline-block
    }
- .footer-text {
+ .footer-text-social {
     font-weight: 500;
      font-size: 16px;
      line-height: 1.5;
@@ -473,8 +473,9 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
  }  
 .social-items-footer{
   display: flex;  
-align-items: baseline;
+align-items: center;
 gap: 16px;
+list-style: none;
 
 }
 .footter-social-list{
@@ -482,10 +483,10 @@ gap: 16px;
     height: 40px;
 }
 .social-link {
-    width: 100%
-    height: 100%,
+    width: 100%;
+    height: 100%;
     background-color: #4d5ae5;
-    border-radiaus: 50%;
+    border-radius: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
