--- a/css/styles.css
+++ b/css/styles.css
@@ -469,11 +469,12 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     justify-content: center;
     align-items: center;
     display: flex;
-    ;
+   
  }  
 .social-items-footer{
   display: flex;  
 align-items: center;
+justify-content: center;
 gap: 16px;
 list-style: none;
 
@@ -482,7 +483,7 @@ list-style: none;
     width: 40px;
     height: 40px;
 }
-.social-link {
+.social-link-footer {
     width: 100%;
     height: 100%;
     background-color: #4d5ae5;
