--- a/css/styles.css
+++ b/css/styles.css
@@ -389,9 +389,40 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     border-top: none;
     padding-left: 16px;
     padding-top: 32px;
-    
-   
+    position: relative;
+    position: relative;
+    overflow: hidden;
+
 }
+    
+.portfolio-info:hover .overlay {
+    transform: translateX(0);
+}
+     
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform: translateX(-100%);
+    transition: transform 250ms ease-in-out;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    
+     
+    }
+.overlay p {
+    color: #4d0dae;
+    padding: 10px;
+    margin: 0;
+    font-size: 18px;
+}
+
 .portfolio-item img {
     display: block;
     width: 100%;
@@ -438,6 +469,7 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
 
 .container-footer-container{
 display: flex;
+align-items: baseline
 }
 .footer-logo {
     display: inline-block;
