--- a/css/styles.css
+++ b/css/styles.css
@@ -396,7 +396,7 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
 }
     
 .portfolio-info:hover .overlay {
-    transform: translateX(0);
+    transform: translateY(0);
 }
      
 
@@ -406,17 +406,29 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     left: 0;
     width: 100%;
     height: 100%;
-    transform: translateX(-100%);
+    transform: translateY(-100%);
     transition: transform 250ms ease-in-out;
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
+}
+.overlay-p { 
+     font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    padding: 40px 32px;
+    background-color: #4d5ae5;
+    height: 100%;
+    width: 100%;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
     
      
-    }
-.overlay p {
+ .overlay p {
     color: #4d0dae;
     padding: 10px;
     margin: 0;
