--- a/css/styles.css
+++ b/css/styles.css
@@ -474,8 +474,14 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
 .page-footer {
     padding: 100px 0;
     background-color: #2e2f42;
-    
+    display: flex;
+    align-items: baseline;
+    margin-right: 120px
+ }
 
+.icon {
+    width: 40px;
+    height: 40px;
 }
 
 .container-footer-container{
@@ -539,7 +545,7 @@ list-style: none;
     display: flex;
     align-items: center;
     justify-content: center;
-    transition: background-color 250ms cubic bezie(0.4, 0, 0.2, 1);
+    transition : background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
