--- a/css/styles.css
+++ b/css/styles.css
@@ -485,8 +485,7 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
 }
 
 .container-footer-container{
-display: flex;
-align-items: baseline
+margin-right: 120px;
 }
 .footer-logo {
     display: inline-block;
@@ -532,6 +531,7 @@ gap: 16px;
 list-style: none;
 
 }
+
 .footter-social-list{
     width: 40px;
     height: 40px;
