--- a/css/styles.css
+++ b/css/styles.css
@@ -419,7 +419,7 @@ margin-right:auto;}
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(77, 90, 229, 0.9);
+    background-color: #4d5ae5;
     color: #f4f4fd;
     font-size: 16px;
     line-height: 1.5;
