--- a/css/styles.css
+++ b/css/styles.css
@@ -276,10 +276,8 @@ margin-right:auto;}
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
     
-    .social-link:hover{
-    background-color: #404bbf;
-    } 
-    .social-link:focus,
+    .social-link:hover, .social-link:focus
+    {background-color: #404bbf;}
     .social-link:active {
     background-color: #404bbf;
     }
