--- a/css/styles.css
+++ b/css/styles.css
@@ -276,7 +276,8 @@ margin-right:auto;}
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
     
-    .social-link:hover, .social-link:focus
+    .social-link:hover,
+    .social-link:focus,
     .social-link:active {
     background-color: #404bbf;
     }
