--- a/css/styles.css
+++ b/css/styles.css
@@ -49,10 +49,8 @@ a {text-decoration: none;}
 }
 .nav-item {
     position: relative;
+    color: #404bbf
 }
-
-
-
 
 .header-logo {
     margin-right: 76px;
@@ -83,6 +81,7 @@ a {text-decoration: none;}
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    
     color: #2e2f42;
     padding: 24px 0;
     text-decoration: none;
