--- a/css/styles.css
+++ b/css/styles.css
@@ -433,11 +433,12 @@ margin-right:auto;}
     background-color: #2e2f42;
     display: flex;
     align-items: baseline;
-    margin-right: 120px
+ padding-left: 156px;
  }
 
 .container-footer-container{
 margin-right: 120px;
+margin-left: 176px;
 }
 .footer-logo {
     display: inline-block;
