--- a/css/styles.css
+++ b/css/styles.css
@@ -92,6 +92,20 @@ a {text-decoration: none;}
 
 }
 
+.active::after {
+            content: "";
+            position: absolute;
+            left: 0;
+            bottom: -1px;
+            width: 100%;
+            height: 4px;
+            background-color: #404bbf;
+            border-radius: 2px;
+            opacity: 0;
+            transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1)
+        }
+}
+
 .nav-link:hover,
 .nav-link:focus,
 .contacts-link:hover,
