--- a/css/styles.css
+++ b/css/styles.css
@@ -101,10 +101,11 @@ a {text-decoration: none;}
             height: 4px;
             background-color: #404bbf;
             border-radius: 2px;
-            opacity: 0;
-            transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1)
+            opacity: 1;
+            transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
         }
-}
+
+
 
 .nav-link:hover,
 .nav-link:focus,
@@ -112,18 +113,7 @@ a {text-decoration: none;}
 .contacts-link:focus {
     color: #404bbf;
 }
-.nav-link::after {
-    content:"";
-    position: absolute;
-    left: 0;
-     bottom: -1px;
-    width: 100%;
-    height: 4px;
-     background-color: #404bbf;
-     border-radius: 2px;
-    opacity: 0;
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1)
-}
+ 
 
 .nav-link:hover::after,
 .nav-link:focus::after {
