--- a/css/styles.css
+++ b/css/styles.css
@@ -269,7 +269,7 @@ margin-right:auto;}
     align-items: center;
     justify-content: center;
     gap:24px;
-    padding-top:  8px;}
+    margin-top:  8px;}
 .social-link{
     display: flex;
     align-items: center;
@@ -309,7 +309,6 @@ margin-right:auto;}
 .team-item {
     background-color: #ffffff;
     text-align: center;
-    padding-bottom: 20px;
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
         0px 1px 1px rgba(46, 47, 66, 0.16),
