--- a/css/styles.css
+++ b/css/styles.css
@@ -359,8 +359,10 @@ margin-right:auto;}
 }
 
 .portfolio-item {
+    position: relative;
     width: calc((100% - 48px) / 3);
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    overflow: hidden;
 }
 
 .portfolio-item:hover {
@@ -368,6 +370,11 @@ margin-right:auto;}
         0px 1px 1px rgba(46, 47, 66, 0.16),
         0px 2px 1px rgba(46, 47, 66, 0.08);
 }
+.portfolio-item:hover .overlay-text {
+    transform: translateY(0%);
+}
+
+
 
 .portfolio-image-wrapper {
     position: relative;
@@ -417,11 +424,13 @@ margin-right:auto;}
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-image-wrapper:hover .overlay-text {
-    transform: translateY(0%);
-}
+
 /*--------------------------------------------------footer----------------------------------------*/
-     
+  
+.footer-block {
+background-color: #2e2f42;
+}
+
 .contacts-link {
      display:inline-block;
      font-size: 16px;
@@ -433,8 +442,7 @@ margin-right:auto;}
 
 
 .page-footer {
-    padding: 100px 0;
-    background-color: #2e2f42;
+    
     display: flex;
     align-items: baseline;
  padding-left: 156px;
