--- a/css/styles.css
+++ b/css/styles.css
@@ -443,12 +443,10 @@ padding-left: 156px;
      text-decoration: none;
 }
 .page-footer {
-    align-items: baseline;
- }
-
-.container-footer-container{
-
+display: flex;
+gap:120px;
 }
+  
 .footer-logo {
     display: inline-block;
     margin-bottom: 16px;
@@ -469,7 +467,6 @@ padding-left: 156px;
     font-size: 16px;
     line-height: 1.5;
 }
-
 .footer-logo {
         display: inline-block
    }
@@ -483,7 +480,6 @@ padding-left: 156px;
     justify-content: center;
     align-items: center;
     display: flex;
-   
  }  
 .social-items-footer{
   display: flex;  
@@ -491,12 +487,8 @@ align-items: center;
 justify-content: center;
 gap: 16px;
 list-style: none;
-
 }
 
-.footter-social-list{
-    
-}
 .social-link-footer {
     width: 100%;
     height: 100%;
