--- a/css/styles.css
+++ b/css/styles.css
@@ -431,9 +431,10 @@ margin-right:auto;}
 background-color: #2e2f42;
 padding-top: 100px;
 padding-bottom:100px ;
-padding-left: 156px;
 }
-
+.footer-lftcont{
+    margin-right: 120px;;
+}
 .contacts-link {
      display:inline-block;
      font-size: 16px;
@@ -444,7 +445,7 @@ padding-left: 156px;
 }
 .page-footer {
 display: flex;
-gap:120px;
+align-items:baseline;
 }
   
 .footer-logo {
@@ -479,7 +480,7 @@ gap:120px;
     margin-bottom: 16px;
     justify-content: center;
     align-items: center;
-    display: flex;
+    
  }  
 .social-items-footer{
   display: flex;  
