--- a/css/styles.css
+++ b/css/styles.css
@@ -156,12 +156,17 @@ a {text-decoration: none;}
     background-position: center;
     padding: 188px 0;
     text-align: center;  
+    marjin: 0 auto;
     
 }
 
 .section-one .container {
     flex-direction: column;
     
+}
+#section-1 {
+    margin:0 auto;
+
 }
 .section-title {
     font-size: 56px;
